fix: stabilize tab bar on mobile scroll

--- a/frontend/src/app/menu/menu.page.scss
+++ b/frontend/src/app/menu/menu.page.scss
@@ -1,6 +1,6 @@
 ion-content {
   --background: #121212;
-  --padding-bottom: 110px;
+//   --padding-bottom: 110px;
 }
 
 :host {
